--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    <h1 class="heading">Puppies Galore!</h1>
     <!-- insert one div here -->
         <!-- give it 4 children divs -->
              <!-- each child div should have six images linking to the ones in the image folder, there will be repeats -->
