added images in html and use css properties for responsive images

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,49 @@
     <title>Responsive Image Grid</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <h1 class="heading">Puppies Galore!</h1>
     <!-- insert one div here -->
-        <!-- give it 4 children divs -->
-             <!-- each child div should have six images linking to the ones in the image folder, there will be repeats -->
+    <div class="row">
+        <div class="column">
+            <img src="./images/1.jpg">
+            <img src="./images/2.jpg">
+            <img src="./images/3.jpg">
+            <img src="./images/4.jpg">
+            <img src="./images/5.jpg">
+            <img src="./images/6.jpg">
+        </div>
+        <div class="column">
+            <img src="./images/1.jpg">
+            <img src="./images/2.jpg">
+            <img src="./images/3.jpg">
+            <img src="./images/4.jpg">
+            <img src="./images/5.jpg">
+            <img src="./images/6.jpg">
+
+        </div>
+        <div class="column">
+            <img src="./images/1.jpg">
+            <img src="./images/2.jpg">
+            <img src="./images/3.jpg">
+            <img src="./images/4.jpg">
+            <img src="./images/5.jpg">
+            <img src="./images/6.jpg">
+        </div>
+
+
+        <div class="column">
+            <img src="./images/1.jpg">
+            <img src="./images/2.jpg">
+            <img src="./images/3.jpg">
+            <img src="./images/4.jpg">
+            <img src="./images/5.jpg">
+            <img src="./images/6.jpg">
+        </div>
+    </div>
+    <!-- give it 4 children divs -->
+    <!-- each child div should have six images linking to the ones in the image folder, there will be repeats -->
 </body>
+
 </html>
