--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Image Grid</title>
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
-    <h1 class="heading">Puppies Galore!</h1>
-    <!-- insert one div here -->
-        <!-- give it 4 children divs -->
-             <!-- each child div should have six images linking to the ones in the image folder, there will be repeats -->
-</body>
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <h1 class="heading">My Photo Gallery!</h1>
+    <!-- insert container row with images here -->
+    <!-- you can use the css file already made and linked to continue the css if you'd like -->
+  </body>
 </html>
