--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
   <body>
     <h1 class="heading">My Photo Gallery!</h1>
     <!-- insert container row with images here -->
+    <div class="row">
+      <img src="images/1.jpg">
+      <img src="images/2.jpg">
+      <img src="images/3.jpg">
+      <img src="images/4.jpg">
+      <img src="images/5.jpg">
+      <img src="images/6.jpg">
+      
+      <img src="images/1.jpg">
+      <img src="images/2.jpg">
+      <img src="images/3.jpg">
+      <img src="images/4.jpg">
+      <img src="images/5.jpg">
+      <img src="images/6.jpg">
+
+    </div>
     <!-- you can use the css file already made and linked to continue the css if you'd like -->
   </body>
 </html>
