Adding HTML and CSS files

--- a/index.html
+++ b/index.html
@@ -11,5 +11,19 @@
     <h1 class="heading">My Photo Gallery!</h1>
     <!-- insert container row with images here -->
     <!-- you can use the css file already made and linked to continue the css if you'd like -->
+  <div class="row">
+    <img src="images/1.jpg" alt="orchid"/>
+    <img src="images/2.jpg" alt="orchid"/>
+    <img src="images/3.jpg" alt="orchid"/>
+    <img src="images/4.jpg" alt="orchid"/>
+    <img src="images/5.jpg" alt="orchid"/>
+    <img src="images/6.jpg" alt="orchid"/>
+    <img src="images/1.jpg" alt="orchid"/>
+    <img src="images/2.jpg" alt="orchid"/>
+    <img src="images/3.jpg" alt="orchid"/>
+    <img src="images/4.jpg" alt="orchid"/>
+    <img src="images/5.jpg" alt="orchid"/>
+    <img src="images/6.jpg" alt="orchid"/>
+  </div>
   </body>
 </html>
