--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1 class="heading">My Photo Gallery!</h1>
+    <h1 class="heading">Breakout room 3!</h1>
     <!-- insert container row with images here -->
     <div class="row">
       <img src="./images/1.jpg" alt="">
