--- a/index.html
+++ b/index.html
@@ -7,9 +7,30 @@
     <title>Responsive Image Grid</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="flex-container">
     <h1 class="heading">My Photo Gallery!</h1>
     <!-- insert container row with images here -->
+    <div class="row" padding="0px 4px">
+      <img src="/images/1.jpg">
+      <img src="/images/2.jpg">
+      <img src="/images/3.jpg">
+      <img src="/images/4.jpg">
+      <img src="/images/5.jpg">
+      <img src="/images/6.jpg">
+      <img src="/images/1.jpg">
+      <img src="/images/2.jpg">
+      <img src="/images/3.jpg">
+      <img src="/images/4.jpg">
+      <img src="/images/5.jpg">
+      <img src="/images/6.jpg">
+      <img src="/images/7.jpg">
+      <img src="/images/8.jpg">
+      <img src="/images/9.jpg">
+      <img src="/images/1.jpg">
+      <img src="/images/2.jpg">
+      <img src="/images/3.jpg">
+    </div>
+    
     <!-- you can use the css file already made and linked to continue the css if you'd like -->
   </body>
 </html>
